@@ -13,6 +13,7 @@ Cacti CHANGELOG
 -bug#0001191: Faulty IP address validation by ping.php script
 -bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
 -bug#0001206: wrong "include" statements replaced by "include_once" (was: Graphs are not Zoom-able)
+-bug#0001211: Allow use of "REMOTE_USER" if "PHP_AUTH_USER" is not set for authenication
 -bug#0001213: Template Copy does not hash copied template_items 
 -bug#0001215: Impossible to define a none availability with the client cli/add_device.php
 -bug#0001216: CSV Export for zoomed graph, results in Validation error
